--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,134 @@
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+
+
 .App {
   text-align: center;
+  background-image: linear-gradient(to bottom right, #F6F6F6, #D4D7DD);
+  height: 100vh;
 }
 
 .App-logo {
@@ -20,9 +149,33 @@
 .App-link {
   color: #09d3ac;
 }
+a{
+  text-decoration: none;
+  color : #420000;
+}
+.welcomeForm{
+  padding-top: 10%;;
+}
 
-.card {
-  background-color:rgba(255,30,90,.3);
-  width: 20%;
-  height: 10%;
+
+.welcomeButton:nth-child(1){
+ 
+  margin-right:3%;
+}
+.welcomeButton:nth-child(3){
+  margin-left:3%;
+
+}
+.welcomeButton{
+  border-radius: 10px;
+  border: 4px solid #d4d7dd;
+  padding: 10px 20px;
+  background-color: #EAE9E9;
+  font-size: 1.4rem;
+}
+.welcomeButton:hover{
+  background-color: #d4d7dd;
+  transition: .7s;
+  
+
 }
