--- a/src/App.css
+++ b/src/App.css
@@ -25,4 +25,11 @@
   background-color:rgba(255,30,90,.3);
   width: 20%;
   height: 10%;
+  margin: 2%;
+}
+
+.card-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
