--- a/src/App.css
+++ b/src/App.css
@@ -128,12 +128,14 @@ body{
   min-height: 100%;
    
 }
-/* h1, h2, h3 ,h4 , h5, h6 {
-
+h1, h2, h3 ,h4 , h5, h6, a {
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  color: #6a0000;
 }
-p{
-  
-} */
+p, li{
+  font-family: 'Lato', sans-serif;
+}
 .App {
   text-align: center;
   
@@ -164,7 +166,6 @@ html {
 }
 a{
   text-decoration: none;
-  color : #420000;
 }
 .welcomeForm{
   padding-top: 10%;
@@ -206,13 +207,68 @@ a{
   /* width: 50%; */
 }
 .card {
-  background-color:rgba(255,30,90,.3);
+  background: rgb(212,215,221);
+  background: radial-gradient(circle, rgba(212,215,221,1) 0%, rgba(234,233,233,1) 25%, rgba(246,246,246,1) 64%);
+  color: #420000;
+  box-shadow: 10px 10px 8px #888888;
+  border-radius: 5%;
   width: 20%;
-  height: 10%;
-  margin: 2%;
+  margin: 1%;
+  padding: 1%;
 }
 
 .card-container {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;}
+  flex-wrap: wrap;
+}
+
+button{
+  border-radius: 10px;
+  border: 4px solid #d4d7dd;
+  padding: 10px 20px;
+  background-color: #EAE9E9;
+  font-size: 1.2rem;
+  margin: 5%;
+}
+
+button:hover{
+  color: #EAE9E9;
+  background-color: #6a0000;
+  transition: .7s;
+}
+
+input, textarea {
+  padding: 12px 20px;
+  margin: 20px;
+  font-size: 1.4rem;
+  box-sizing: border-box;
+  background-color: #EAE9E9;
+}
+
+.vendorBox {
+  background: rgb(212,215,221);
+  background: radial-gradient(circle, rgba(212,215,221,1) 0%, rgba(234,233,233,1) 25%, rgba(246,246,246,1) 64%);
+  font-size: 1.6rem;
+  border-radius: 2%;
+}
+
+.createEventForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.navbar {
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar a {
+  padding: 15px;
+}
+
+.navbar a.active {
+  text-decoration: underline;
+}
